--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                      <h2 class="text-white-50 mx-auto mt-2 mb-5"><img src="assets/img/mobile3-transparent.png" width="429" height="96"></h2>
+                      <h2 class="text-white-50 mx-auto mt-2 mb-5"><img class="img-fluid" src="assets/img/mobile3-transparent.png" width="429" height="96"></h2>
                     </div>
                 </div>
             </div>
