--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                                 <h4 class="text-uppercase m-0">Text/Call</h4>
                                 <hr class="my-4 mx-auto" />
                                 <div class="small text-black-50">+1 (208) 397-8051</div>
+								<div class="small text-black-50">+1 (208) 760-6873</div>
                             </div>
                         </div>
                     </div>
